[package]
name = "wav-gen"
version = "0.1.1"
description = "Generates a sound file using the wav format"
authors = ["Andrew Doble"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
wav = "1.0.0"
csv = "1.1"
bunt = "0.2"
#serde = { version = "1.0", features = ["derive"] }